Fixed error when entering no email when ordering
Signed-off-by: Okan <okanemeni@outlook.com>

--- a/Views/Cart/sendOrderMail.cshtml
+++ b/Views/Cart/sendOrderMail.cshtml
@@ -4,9 +4,9 @@
 @using (Html.BeginForm("EmailOrder", "Cart", FormMethod.Post))
 {
    
-    <h2>u bent niet ingelogd, voer uw e-mailadres in om een bevestiging te ontvangen!</h2>
+    <h2>U bent niet ingelogd, voer uw e-mailadres in om een bevestiging te ontvangen!</h2>
     <hr>
-    @Html.TextBoxFor(model => model.Email)
+    @Html.TextBoxFor(model => model.Email, new {required = "required"})
     @Html.ValidationMessageFor(model => model.Email)
     <input type="submit" class="btn btn-primary" value="Doorgaan" asp-controller="cart" asp-action="pay">
 }
