--- a/Views/UserManagement/updateInfo.cshtml
+++ b/Views/UserManagement/updateInfo.cshtml
@@ -1,7 +1,7 @@
 @model UserEdit
 
 @{
-    ViewData["Title"] = "Register";
+    ViewData["Title"] = "Account Info";
 }
 <link rel="stylesheet" href="~/css/product_creation_generic.css">
 
@@ -77,7 +77,7 @@
                    
             <a asp-area="Identity" asp-page="/Account/Manage/Index">Geavanceerde instellingen</a>
             <br>
-             <input type="submit" class="btn btn-primary" value="Save" />
+             <input type="submit" class="btn btn-primary" value="Opslaan" />
 
         </form>
     </div>
