--- a/Views/Cart/Index.cshtml
+++ b/Views/Cart/Index.cshtml
@@ -62,7 +62,7 @@
     </table>
     <br>
     <form  method="get">
-     <input type="submit" class="btn btn-primary"  value="Doorgaan met shoppen" asp-controller="Home" asp-action="index" >
+     <input type="submit" class="btn btn-default"  value="Doorgaan met shoppen" asp-controller="Home" asp-action="index" >
      <input type="submit" class="btn btn-primary float-right"  value="Checkout" asp-controller="cart" asp-action="CreatePDF">
     </form>
     
