--- a/Views/CategoryList/ConfirmDelete.cshtml
+++ b/Views/CategoryList/ConfirmDelete.cshtml
@@ -22,7 +22,7 @@
     
         <form asp-action="DeleteCategory" asp-controller="CategoryList">
             <input type="hidden" asp-for="Id" />
-            <input type="submit" value="Delete" class="btn btn-danger" /> |
+            <input type="submit" value="Verwijderen" class="btn btn-danger" /> |
             <a asp-action="Index" asp-controller="CategoryList">Terug naar lijst</a>
         </form>
     </div>
