--- a/Views/Products/ChooseProductsoort.cshtml
+++ b/Views/Products/ChooseProductsoort.cshtml
@@ -1,5 +1,8 @@
 @model WebApp1.Models.EditproductsoortModel
 @using Microsoft.AspNetCore.Http
+@{
+    ViewData["Title"] = "Product soort bewerken";
+}
 
 <link rel="stylesheet" href="~/css/product_creation_generic.css">
 
@@ -18,7 +21,7 @@
                         </div>
                     }
                 <div class="form-group">
-                    <input type="submit"  value="ChooseProductsoort" class="btn btn-primary" />
+                    <input type="submit"  value="Bewerk geselecteerde product soort" class="btn btn-primary" />
                 </div>
             </form>
         </div>
