--- a/Views/Products/Create.cshtml
+++ b/Views/Products/Create.cshtml
@@ -1,4 +1,7 @@
 @model WebApp1.Models.AddCategory
+@{
+    ViewData["Title"] = "Product Aanmaken";
+}
 <link rel="stylesheet" href="~/css/product_creation_generic.css">
  <script type='text/javascript'>
 	var i=0;
@@ -82,7 +85,7 @@
         </div>
          <div class="form-group">
                 <label asp-for="@Model.productsoort.Image" class="control-label"></label>
-                <input asp-for="@Model.productsoort.Image" type="file" Class="form-control" placeholder="Image"/>
+                <input asp-for="@Model.productsoort.Image" type="file" Class="form-control-file" placeholder="Image"/>
                 <span asp-validation-for="@Model.productsoort.Image" class="text-danger"></span>
         </div>
        <div id="categoryFormContent" class = "checkbox checkboxlist">
@@ -98,7 +101,7 @@
         <div id="container" class="form-group"></div>
 
         <div class="form-group">
-            <input id="AddAtribute" class="btn btn-primary" type="button" value="Voeg Product eigenchap toe" onclick="addFields()" />
+            <input id="AddAtribute" class="btn btn-default" type="button" value="Voeg Product eigenchap toe" onclick="addFields()" />
         </div>
         <div class="form-group">
             <hr>
