--- a/Views/UserManagement/updateInfoAdmin.cshtml
+++ b/Views/UserManagement/updateInfoAdmin.cshtml
@@ -1,25 +1,26 @@
 @model UserEdit
 
 @{
-    ViewData["Title"] = "Register";
+    ViewData["Title"] = "Account Info";
 }
 <link rel="stylesheet" href="~/css/product_creation_generic.css">
 
 <div class="pageRoot">
 
 <div class="row">
-    <div class="col-md-6">
+    <div class="col-md-12">
         <form asp-action="updateInfoAdmin" method="post">
-            <h4>Update Account Info.</h4>
+            <h3>Persoonlijke gegevens veranderen</h3>
+            <hr>
             <div asp-validation-summary="All" class="text-danger"></div>
             <input asp-for="UserId" type="hidden" />
             <div class="form-group">
-                <label asp-for="FirstName"></label>
+                <label asp-for="FirstName">Voornaam</label>
                 <input asp-for="FirstName" class="form-control" />
                 <span asp-validation-for="FirstName" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for=" LastName"></label>
+                <label asp-for=" LastName">Achternaam</label>
                 <input asp-for=" LastName" class="form-control" />
                 <span asp-validation-for=" LastName" class="text-danger"></span>
             </div>
@@ -39,27 +40,27 @@
             </div>
             }
             <div class="form-group">
-                <label asp-for=" Street"></label>
+                <label asp-for=" Street">Straat</label>
                 <input asp-for=" Street" class="form-control" />
                 <span asp-validation-for=" Street" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for=" City"></label>
+                <label asp-for=" City">Stad</label>
                 <input asp-for=" City" class="form-control" />
                 <span asp-validation-for=" City" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for=" BirthDate"></label>
+                <label asp-for=" BirthDate">Geboortedatum</label>
                 <input asp-for=" BirthDate" class="form-control" />
                 <span asp-validation-for=" BirthDate" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for=" PostalCode"></label>
+                <label asp-for=" PostalCode">Postcode</label>
                 <input asp-for=" PostalCode" class="form-control" />
                 <span asp-validation-for=" PostalCode" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for=" HouseNumber"></label>
+                <label asp-for=" HouseNumber">Huisnummer</label>
                 <input asp-for=" HouseNumber" class="form-control" />
                 <span asp-validation-for=" HouseNumber" class="text-danger"></span>
             </div> 
@@ -69,11 +70,11 @@
                 <span asp-validation-for=" TelephoneNumber" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for=" Email"></label>
+                <label asp-for=" Email">E-Mail</label>
                 <input asp-for=" Email" class="form-control" />
                 <span asp-validation-for=" Email" class="text-danger"></span>
             </div>
-             <input type="submit" class="btn btn-success" value="Save" />
+             <input type="submit" class="btn btn-success" value="Opslaan" />
           
 
         </form>
