--- a/Areas/Identity/Pages/Account/Lockout.cshtml
+++ b/Areas/Identity/Pages/Account/Lockout.cshtml
@@ -3,8 +3,13 @@
 @{
     ViewData["Title"] = "Locked out";
 }
+<link rel="stylesheet" href="~/css/edit_product.css">
+
+
+<div class="pageRoot"> 
 
 <header>
-    <h1 class="text-danger">@ViewData["Title"]</h1>
-    <p class="text-danger">This account has been locked out, please try again later.</p>
+    <h1 style="color:black; class="text-danger">@ViewData["Title"]</h1>
+    <p style="color:black; class="text-danger">This account has been locked out, please try again later.</p>
 </header>
+</div>>
