--- a/Views/Cart/Index.cshtml
+++ b/Views/Cart/Index.cshtml
@@ -1,5 +1,5 @@
 @using WebApp1.Models
-@model WebApp1.Models.Productwaarde
+@model WebApp1.Models.Database.Product
 @{
     ViewData["Title"] = "Winkelmand";
 }
