--- a/Views/Category/Search.cshtml
+++ b/Views/Category/Search.cshtml
@@ -1,3 +1,4 @@
+@using WebApp1.Models.Database
 @model WebApp1.Models.CategoryViewModel
 
 @{
@@ -14,12 +15,12 @@
     // The product page itself consists of 3 columns
     // We must first sort all the products into each column    
     // Afterwards, we populate the page
-    List<Productwaarde> col0Items = new List<Productwaarde>();
-    List<Productwaarde> col1Items = new List<Productwaarde>();
-    List<Productwaarde> col2Items = new List<Productwaarde>();
+    List<Product> col0Items = new List<Product>();
+    List<Product> col1Items = new List<Product>();
+    List<Product> col2Items = new List<Product>();
 
     int currentColumn = 0;
-    foreach (Productwaarde item in Model.Products.Data)
+    foreach (Product item in Model.Products.Data)
     {
         switch (currentColumn)
         {
@@ -48,7 +49,7 @@
         <h4>Zoekterm: @Model.CategoryName</h4>
         <div class="row" id="products">
             <div class="col-sm">
-                @foreach (Productwaarde item in col0Items)
+                @foreach (Product item in col0Items)
                 {
                     <div class="card" style="width: 20rem;">
                         <div class="card-body">
@@ -94,7 +95,7 @@
                 }
             </div>
             <div class="col-sm">
-                @foreach (Productwaarde item in col1Items)
+                @foreach (Product item in col1Items)
                 {
                     <div class="card" style="width: 20rem;">
                         <div class="card-body">
@@ -140,7 +141,7 @@
                 }
             </div>
             <div class="col-sm">
-                @foreach (Productwaarde item in col2Items)
+                @foreach (Product item in col2Items)
                 {
                     <div class="card" style="width: 20rem;">
                         <div class="card-body">
