--- a/Views/Products/Create2.cshtml
+++ b/Views/Products/Create2.cshtml
@@ -1,4 +1,4 @@
-@model WebApp1.Models.Productwaarde
+@model WebApp1.Models.Database.Product
 @using Microsoft.AspNetCore.Http
 
 <link rel="stylesheet" href="~/css/product_creation_generic.css">
