--- a/Views/Products/Create3.cshtml
+++ b/Views/Products/Create3.cshtml
@@ -94,37 +94,37 @@
             <form asp-action="Create3" enctype="multipart/form-data">
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                 <div class="form-group">
-                    <label asp-for="productwaarde.Title" class="control-label">Titel</label>
-                    <input asp-for="productwaarde.Title" class="form-control" placeholder="Title"/>
-                    <span asp-validation-for="productwaarde.Title" class="text-danger"></span>
+                    <label asp-for="Product.Title" class="control-label">Titel</label>
+                    <input asp-for="Product.Title" class="form-control" placeholder="Title"/>
+                    <span asp-validation-for="Product.Title" class="text-danger"></span>
                 </div>
                 <div class="form-group">
-                    <label asp-for="productwaarde.Price" class="control-label">Prijs</label>
-                    <input asp-for="productwaarde.Price" class="form-control" placeholder="Price"/>
-                    <span asp-validation-for="productwaarde.Price" class="text-danger"></span>
+                    <label asp-for="Product.Price" class="control-label">Prijs</label>
+                    <input asp-for="Product.Price" class="form-control" placeholder="Price"/>
+                    <span asp-validation-for="Product.Price" class="text-danger"></span>
                 </div>
                  <div class="form-group">
-                    <label asp-for="productwaarde.Quantity" class="control-label">Kwantiteit</label>
-                    <input asp-for="productwaarde.Quantity" class="form-control" placeholder="Quantity"/>
-                    <span asp-validation-for="productwaarde.Quantity" class="text-danger"></span>
+                    <label asp-for="Product.Quantity" class="control-label">Kwantiteit</label>
+                    <input asp-for="Product.Quantity" class="form-control" placeholder="Quantity"/>
+                    <span asp-validation-for="Product.Quantity" class="text-danger"></span>
                 </div>
                 <div class="form-group">
                     
-                    <input asp-for="productwaarde.ProductsoortId" class="form-control" placeholder="ProductsoortId" type="hidden"  value= '@Model.productwaarde.Id' />
-                    <span asp-validation-for="productwaarde.ProductsoortId" class="text-danger"></span>
-                     <input asp-for="productwaarde.DiscountedPrice" class="form-control" placeholder="ProductsoortId" type="hidden"  value= "-1" />
-                    <span asp-validation-for="productwaarde.DiscountedPrice" class="text-danger"></span>
+                    <input asp-for="Product.ProductsoortId" class="form-control" placeholder="ProductsoortId" type="hidden"  value= '@Model.Product.Id' />
+                    <span asp-validation-for="Product.ProductsoortId" class="text-danger"></span>
+                     <input asp-for="Product.DiscountedPrice" class="form-control" placeholder="ProductsoortId" type="hidden"  value= "-1" />
+                    <span asp-validation-for="Product.DiscountedPrice" class="text-danger"></span>
                 </div>
 
                 <div class="form-group">
-                    <label asp-for="productwaarde.Description" class="control-label">Beschrijving</label>
-                    <input asp-for="productwaarde.Description" class="form-control" placeholder="Description"/>
-                    <span asp-validation-for="productwaarde.Description" class="text-danger"></span>
+                    <label asp-for="Product.Description" class="control-label">Beschrijving</label>
+                    <input asp-for="Product.Description" class="form-control" placeholder="Description"/>
+                    <span asp-validation-for="Product.Description" class="text-danger"></span>
                 </div>
 
                  <div class="form-group">
-                <input asp-for="productwaarde.Image" type="file" Class="form-control-file" placeholder="Image"/>
-                <span asp-validation-for="productwaarde.Image" class="text-danger"></span>
+                <input asp-for="Product.Image" type="file" Class="form-control-file" placeholder="Image"/>
+                <span asp-validation-for="Product.Image" class="text-danger"></span>
                 </div>
                 @{var i = 0;}
                  @foreach (var item in Model.Attribuutsoorts)
