--- a/Views/interactiveImg/Index.cshtml
+++ b/Views/interactiveImg/Index.cshtml
@@ -1,4 +1,4 @@
-@model IEnumerable<WebApp1.Models.Productsoort>
+@model IEnumerable<WebApp1.Models.Database.Category>
  
    <head>
 <link rel="stylesheet" href="~/css/interactiveImg.css">
