--- a/Views/interactiveImg/parent.cshtml
+++ b/Views/interactiveImg/parent.cshtml
@@ -1,4 +1,4 @@
-@model List<IEnumerable<WebApp1.Models.Productsoort>>
+@model List<IEnumerable<WebApp1.Models.Database.Category>>
  
    <head>
 <link rel="stylesheet" href="~/css/interactiveImg.css">
