Fixed attributes not being added when adding category
Signed-off-by: Okan <okanemeni@outlook.com>

--- a/Views/Products/Create.cshtml
+++ b/Views/Products/Create.cshtml
@@ -18,9 +18,9 @@
             container.appendChild(document.createTextNode("Attribute "+ i));
 
             var input = document.createElement("input");
-            input.name= "productsoort.Attribuutsoort["+i+"].Attrbuut";
+            input.name= "category.AttributeType["+i+"].Name";
             input.setAttribute("class","form-control");
-            input.id="productsoort.Attribuutsoort["+i+"].Attrbuut";
+            input.id="category.AttributeType["+i+"].Name";
             input.type="text";
             input.value="";
             input.placeholder="Attribuut Naam";
@@ -28,24 +28,24 @@
 
             var radioN = document.createElement("input");
 				radioN.type = "radio";
-                radioN.id = "productsoort.Attribuutsoort["+i+"].Type";
-				radioN.name = "productsoort.Attribuutsoort["+i+"].Type";
+                radioN.id = "category.AttributeType["+i+"].Type";
+				radioN.name = "category.AttributeType["+i+"].Type";
                 radioN.checked = true;
 				radioN.value = "number";
     
 
              var radioS = document.createElement("input");
 				radioS.type = "radio";
-                radioS.id = "productsoort.Attribuutsoort["+i+"].Type";
-				radioS.name = "productsoort.Attribuutsoort["+i+"].Type";
+                radioS.id = "category.AttributeType["+i+"].Type";
+				radioS.name = "category.AttributeType["+i+"].Type";
 				radioS.value = "string";
                 
                 
             /*
             var input2 = document.createElement("input");
-            input2.name= "productsoort.Attribuutsoort["+i+"].Type";
+            input2.name= "category.AttributeType["+i+"].Type";
             input2.setAttribute("class", "form-control");
-            input2.id="productsoort.Attribuutsoort["+i+"].Type";
+            input2.id="category.AttributeType["+i+"].Type";
             input2.type="text";
             input2.value="";
             input2.placeholder="Type";
