--- a/Views/viewProduct/Index.cshtml
+++ b/Views/viewProduct/Index.cshtml
@@ -64,7 +64,7 @@
                 @if (ViewBag.alreadyInFav)
                 {
                     <input type="hidden" name="returnUrl" value="@Url.Action("Index","ViewProduct", new {id=viewProductModel.Id})"/>
-                    <input type="submit" formaction="@Url.Action("RemoveProduct", "Favorites")" class="CartBtn" value="Verwijder uit Favorieten"> 
+                    <input type="submit"  formaction="@Url.Action("RemoveProduct", "Favorites")" class="CartBtnRed" value="Verwijder uit Favorieten"> 
                 }
                 else
                 {
