Added filters and color coding to order history (user)
Signed-off-by: Okan <okanemeni@outlook.com>

--- a/Views/Orders/Details.cshtml
+++ b/Views/Orders/Details.cshtml
@@ -1,4 +1,7 @@
 @using WebApp1.Models.Database
+@{
+    ViewData["Title"] = "Bestelling details";
+}
 <link rel="stylesheet" href="~/css/product_creation_generic.css">
 <link rel="stylesheet" href="~/css/favorites.css">
 <div class="pageRoot">
