--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -52,7 +52,7 @@
                     <div class="dropdown-divider"></div>
                     <a class="dropdown-item" href="@Url.Action("Index", "Cart")" id="cartLink">Winkelmand</a>
                     <a class="dropdown-item" href="@Url.Action("Index", "Favorites")" id="favoritesLink">Favorieten</a>
-                    <a class="dropdown-item" href="@Url.Action("oldOrders", "Cart")">Bestelgeschiedenis</a>
+                    <a class="dropdown-item" href="@Url.Action("Index", "Orders")">Bestelgeschiedenis</a>
                     
                 </div>
             </li>
