add styling to reset password for the admin page

--- a/Views/UploadFiles/Index.cshtml
+++ b/Views/UploadFiles/Index.cshtml
@@ -9,7 +9,7 @@
     @switch (ViewBag.resultMsg)
     {
         case UploadFilesController.ResultMessage.FailedUploading:
-            <div class="alert-red">
+            <div class="alert-green">
                 <span class="closeBtn" onclick="this.parentElement.style.display = 'none';">&times;</span>
                 <i class="material-icons">error</i>   Er is iets foutgegaan bij het uploaden van het bestand!
             </div>
