--- a/Views/UserManagement/ResetUserPassword.cshtml
+++ b/Views/UserManagement/ResetUserPassword.cshtml
@@ -1,32 +1,64 @@
 @model UserEdit
+@using Controllers
 
 <link rel="stylesheet" href="~/css/product_creation_generic.css">
 <div class="pageRoot">
 
      <form asp-action="ResetUserPassword" method="post">
             <h4>Update user Password</h4>
+             @switch (ViewBag.resultMsg)
+                {
+                    case UserManagementController.ResultMessage.error:
+                    <div class="alert-red">
+                    <span class="closeBtn" onclick="this.parentElement.style.display = 'none';">&times;</span>
+                    <i class="material-icons">error</i>   Er is iets foutgegaan bij het resetten van het wachtwoord!
+                    </div>
+                break;
+                    case UserManagementController.ResultMessage.passwordReset:
+                    <div class="alert-green">
+                    <span class="closeBtn" onclick="this.parentElement.style.display = 'none';">&times;</span>
+                    <i class="material-icons">error</i>   Het wachtwoord is gereset!
+                    </div>
+                break;
+                    case UserManagementController.ResultMessage.emailSent:
+                    <div class="alert-green">
+                    <span class="closeBtn" onclick="this.parentElement.style.display = 'none';">&times;</span>
+                    <i class="material-icons">done_outline</i>   Een email is gestuurd aan de gebruiker
+                    </div>
+                break;
+                 case UserManagementController.ResultMessage.passwordIsRequired:
+                    <div class="alert-red">
+                    <span class="closeBtn" onclick="this.parentElement.style.display = 'none';">&times;</span>
+                    <i class="material-icons">error</i> Ongeldig Wachtwoord!
+                    </div>
+                break;
+                }
             <div asp-validation-summary="All" class="text-danger"></div>
             <input asp-for="UserId" type="hidden" />
             <input asp-for="Email" type="hidden" />
             <br>
             <div class="form-group">
-                <label asp-for="Password">Password:</label>
+                <label asp-for="Password">Wachtwoord:</label>
                 <input asp-for="Password" class="form-control" />
                 <span asp-validation-for="Password" class="text-danger"></span>
             </div>
-            <hr>
-            <h4>Of.. Stuur een link aan de gebruiker</h4>
-            <form action="UserManagement" method="post">
-            <button  class="btn btn-primary" value="Send link" formaction= "ResetUserPassword"  >
-    stuur link
-    </button>
-    <hr>
-            <input type="submit" class="btn btn-success" value="Reset Password" />
+            <button  class="btn btn-success" value="Send link"  onclick="location.href='@Url.Action("ResetUserPassword", "UserManagement") %>'" >
+                    Wachtwoord resetten
+            </button>
+     </form>
+      <hr>
 
+            <h4>Of.. Stuur een link aan de gebruiker</h4>
+        <form asp-action="sendEmailToUser" method="post">
+          <input asp-for="UserId" type="hidden" />
+            <input asp-for="Email" type="hidden" />
+
+            <button  class="btn btn-primary" value="Send link"  onclick="location.href='@Url.Action("sendEmailToUser", "UserManagement") %>'" >
+                    Stuur link
+            </button>
+            <hr>
             </form>
 
-
-           
-     </form>
+          
 
 </div>
