Added 'Jump to Page' option to JS pagination
Signed-off-by: Okan <okanemeni@outlook.com>

--- a/Views/CategoryList/Index.cshtml
+++ b/Views/CategoryList/Index.cshtml
@@ -52,6 +52,8 @@
     </table>
     <ul id="pagination" class="pagination flex-wrap" style="margin-top: 10px;">
     </ul>
+    <div id="popover-content" style="display: none;">
+    </div>
 </div>
 <br>
 <script type="module" src="~/js/loadCategoryList.js"></script>
