--- a/Views/Orders/Index.cshtml
+++ b/Views/Orders/Index.cshtml
@@ -51,5 +51,7 @@
     <br>
     <ul id="pagination" class="pagination flex-wrap" style="margin-top: 10px;">
     </ul>
+    <div id="popover-content" style="display: none;">
+    </div>
 </div>
 <script type="module" src="~/js/loadUserOrders.js"></script>
