--- a/Views/ProductList/Index.cshtml
+++ b/Views/ProductList/Index.cshtml
@@ -64,7 +64,8 @@
     </table>
     <ul id="pagination" class="pagination flex-wrap" style="margin-top: 10px;">
     </ul>
+    <div id="popover-content" style="display: none;">
+    </div>
 </div>
 <br>
 <script type="module" src="~/js/loadProductsList.js"></script>
-<script type="module" src="~/js/categoryPopover.js"></script>
