--- a/Views/OrderList/Index.cshtml
+++ b/Views/OrderList/Index.cshtml
@@ -61,6 +61,8 @@
     </table>
     <ul id="pagination" class="pagination flex-wrap" style="margin-top: 10px;">
     </ul>
+    <div id="popover-content" style="display: none;">
+    </div>
 </div>
 <br>
 <script type="module" src="~/js/loadOrderList.js"></script>
