--- a/Views/Statistics/Index.cshtml
+++ b/Views/Statistics/Index.cshtml
@@ -11,11 +11,11 @@
     <hr>
     <div class="row">
         <div class="col-6">
-            <h4></h4>
+            Toon resultaten vanaf: <select id="categoryChartRange"></select>
             <div id="chart1"></div>
         </div>
         <div class="col-6">
-            <h4></h4>
+            Toon resultaten vanaf: <select id="totalChartRange"></select>
             <div id="chart2"></div>
         </div>
     </div>
@@ -33,7 +33,7 @@
             </th>
         </tr>
         </thead>
-        <tbody id="tableBody">
+        <tbody id="">
         @foreach (string[] row in tableRows)
         {
             <tr>
@@ -47,13 +47,57 @@
         }
         </tbody>
     </table>
+    <br>
+    <h2>Producten met lage voorraad</h2>
+    <hr>
+    <div>
+        <table id="table" style="border-radius: 3px;">
+            <thead>
+            <tr>
+                <th>
+                    <input id="filterId" type="text" class="form-control" placeholder="Filteren bij ID">
+                </th>
+                <th>
+                    <input id="filterName" type="text" class="form-control" placeholder="Filteren bij Naam">
+                </th>
+                <th>
+                    <input id="filterStock" type="text" class="form-control" placeholder="Kleiner/gelijk dan: 10">
+                </th>
+                <th>
+                    <input id="filterCategory" type="text" class="form-control" placeholder="Filteren bij Categorie">
+                </th>
+                <th>
+                
+                </th>
+            </tr>
+            <tr>
+                <th>
+                    ID
+                </th>
+                <th>
+                    Naam
+                </th>
+                <th>
+                    Voorraad
+                </th>
+                <th>
+                    Categorie
+                </th>
+                <th>
+                    Opties
+                </th>
+            </tr>
+            </thead>
+            <tbody id="tableBody">
+            </tbody>
+        </table>
+        <ul id="pagination" class="pagination flex-wrap" style="margin-top: 10px;">
+        </ul>
+        <div id="popover-content" style="display: none;">
+        </div>
+    </div>
 </div>
 <style>
-    hr {
-        border: 0;
-        height: 1px;
-        background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(10, 10, 10, 10.75), rgba(0, 0, 0, 0));
-    }
     div.container {
         background-color: #ffffff;
         border-radius: 3px;
@@ -76,5 +120,5 @@
 </style>
 @section scripts{
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
-    <script type="text/javascript" src="~/js/loadGoogleCharts.js"></script>
+    <script type="module" src="~/js/statisticsPage.js"></script>
 }
