fix the bug for unregistered users orders

--- a/Views/Cart/sendOrderMail.cshtml
+++ b/Views/Cart/sendOrderMail.cshtml
@@ -4,7 +4,7 @@
 @using (Html.BeginForm("EmailOrder", "Cart", FormMethod.Post))
 {
    
-    <h2>U bent niet ingelogd, voer uw e-mailadres in om een bevestiging te ontvangen!</h2>
+    <h2>U bent niet ingelogd, vul de volginde gegevens in!</h2>
     <hr>
    
             <div class="form-group">
